Add performance test for syntax highlighting (timing need to be tuned)